# rhino

./: .gitattributes  .pdm-python  hello_world.py  pyproject.toml  readme.md  svFileBatcher.py  sv_scripts.rhproj
src/sv_rhino/: hello_world.py  sv_file_batcher.py
tests/: svFileBatcher_test.py
tests/dwgs/: IN_02500_WPAW-Side.dwg  IN_02500_WPBN-Plan.dwg  IN_02500_WPBN-Side.dwg  IN_02500_WPBR-Plan.dwg  IN_02500_WPBR-Side.dwg  IN_02500_WPBW-Plan.dwg  IN_02500_WPBW-Side.dwg  IN_02500_WPFF-Plan.dwg  IN_02500_WPFF-Side.dwg  readme.md
