[project]
name = "sv_rhino"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SValenziano", email = "senorvalenz@gmail.com"},
]
dependencies = ["pytest>=8.4.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
